--- a/index.html
+++ b/index.html
@@ -33,30 +33,61 @@
             <div class="textcontainer">
               <h5>Production Public Key:</h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Adipisci eos a nostrum consequatur doloremque itaque ratione
-                nisi quo cum ullam<button>Read More</button>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Phasellus imperdiet, nulla et dictum interdum, nisi lorem
+                egestas vitae scel<span id="dots_1">...</span
+                ><span id="more_1"
+                  >erisque enim ligula venenatis dolor. Maecenas nisl est,
+                  ultrices nec congue eget, auctor vitae massa. Fusce luctus
+                  vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed
+                  ullamcorper ipsum dignissim ac. In at libero sed nunc
+                  venenatis imperdiet sed ornare turpis. Donec vitae dui eget
+                  tellus gravida venenatis. Integer fringilla congue eros non
+                  fermentum. Sed dapibus pulvinar nibh tempor porta.</span
+                >
+                <button onclick="myFunction(1)" id="myBtn_1">Read More</button>
               </p>
             </div>
 
-            <div class="textcontainer">
+            <div class="textcontainerII">
               <h5>Test Public Key:</h5>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
-                ullam sint beatae quibusdam iure minima magnam suscipit numquam
-                non nisi<button>Read More</button>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Phasellus imperdiet, nulla et dictum interdum, nisi lorem
+                egestas vitae scel<span id="dots_2">...</span
+                ><span id="more_2"
+                  >erisque enim ligula venenatis dolor. Maecenas nisl est,
+                  ultrices nec congue eget, auctor vitae massa. Fusce luctus
+                  vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed
+                  ullamcorper ipsum dignissim ac. In at libero sed nunc
+                  venenatis imperdiet sed ornare turpis. Donec vitae dui eget
+                  tellus gravida venenatis. Integer fringilla congue eros non
+                  fermentum. Sed dapibus pulvinar nibh tempor porta.</span
+                >
+                <button onclick="myFunction(2)" id="myBtn_2">Read More</button>
               </p>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+    <script>
+      function myFunction(id) {
+        var dots = document.getElementById("dots_" + id);
+        var moreText = document.getElementById("more_" + id);
+        var btnText = document.getElementById("myBtn_" + id);
+
+        if (dots.style.display === "none") {
+          dots.style.display = "inline";
+          btnText.innerHTML = "Read More";
+          moreText.style.display = "none";
+        } else {
+          dots.style.display = "none";
+          btnText.innerHTML = "Read Less";
+          moreText.style.display = "inline";
+        }
+      }
+    </script>
   </body>
 </html>
-
-<!-- <div>
-  <div class="firstcontainer">
-    <img class="iconimg" src="./assests/Images/PME icon.png" alt="" />
-    <h1>A community that drives you to <span id="mast">mastery</span></h1>
-  </div>
-</div> -->
